# olx-browser

./: .gitignore  .~lock.listings.csv#  Cargo.toml  README.md  all_listings.json  listings.csv
src/: error.rs  lib.rs  main.rs
src/data/: gpu_benchmark_match.rs  mod.rs  models.rs
src/scraper/: mod.rs  olx.rs
src/ui/: app.rs  mod.rs  ui.rs  widgets.rs
