[package]
name = "olxbrowser"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.27.0"
scraper = "0.19.1"
tui = "0.19.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
ratatui = "0.27.0"
serde_json = "1.0.120"

serde = { version = "1.0.204", features = ["derive"] }
csv = "1.3.0"
